# cAimbot

./: .gitignore  CMakeLists.txt  README.md
include/: InputController.hpp  SafetyHandler.hpp  ScreenCapturer.hpp  TargetDetector.hpp
src/: InputController.cpp  SafetyHandler.cpp  ScreenCapturer.cpp  TargetDetector.cpp  main.cpp
